PHP版画像投稿、いいね機能実装

--- a/webapp/php/nginx.php.conf
+++ b/webapp/php/nginx.php.conf
@@ -17,6 +17,10 @@ http {
       root /home/isucon/webapp/static;
     }
 
+    location /image/ {
+      root /home/isucon/webapp;
+    }
+
     location / {
       root /home/isucon/webapp/php;
 
